--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,7 +27,7 @@ body {
       height: 100vh;
       background: limegreen;
       inset: 0;
-      z-index: -1;
+      z-index: -3;
     }
     .second{
       width: 5vw;
@@ -37,9 +37,11 @@ body {
     }
 
     .minute{
-      width: 15vw;
-      background: cyan;
+      width: 45vw;
+      background: blue;
       z-index: -2;
+      left: 50%;
+      transform: translate(-50%);
     }
 
     .second, .minute {
@@ -49,18 +51,21 @@ body {
     }
     .content {
       display: grid;
-      place-content: center;
       align-content: space-between;
       grid-template-columns: repeat(var(--col), 1fr);
       grid-template-rows: repeat(var(--row), 1fr);
       justify-items: center;
+      margin-block:2vh;
+      margin-inline: 5vw;
+      height: 82vh;
+      width: 90vw;
 
       .circle {
-        background: lightgrey;
-        border-radius: 100%;
-        height: var(--circleW);
         place-self: center;
+        background: Gainsboro;
+        border-radius: 100%;
         width: var(--circleW);
+        height: var(--circleW);
 
         @media screen and (min-width: 50em) {
             --circleW: 20vmin;
