--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,16 +7,16 @@
 }
 
 body {
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   font-size: 16px;
 
   .wrapper {
-      height: inherit;
-      display: grid;
-      place-content: center;
+    height: inherit;
+    display: grid;
+    place-content: center;
     @media screen and (min-width: 50em) {
-        height: 100vh;
+      height: 100dvh;
     }
     [hide] {
       display: none;
@@ -24,19 +24,19 @@ body {
     .hour {
       position: fixed;
       width: 100vw;
-      height: 100vh;
+      height: 100dvh;
       background: limegreen;
       inset: 0;
       z-index: -3;
     }
-    .second{
+    .second {
       width: 5vw;
       background: tomato;
       z-index: -1;
       transform: translateX(-100%);
     }
 
-    .minute{
+    .minute {
       width: 45vw;
       background: blue;
       z-index: -2;
@@ -44,10 +44,11 @@ body {
       transform: translate(-50%);
     }
 
-    .second, .minute {
+    .second,
+    .minute {
       position: fixed;
-      height: 100vh;
-      top:0;
+      height: 100dvh;
+      top: 0;
     }
     .content {
       display: grid;
@@ -55,7 +56,7 @@ body {
       grid-template-columns: repeat(var(--col), 1fr);
       grid-template-rows: repeat(var(--row), 1fr);
       justify-items: center;
-      margin-block:2vh;
+      margin-block: 2vh;
       margin-inline: 5vw;
       height: 82vh;
       width: 90vw;
@@ -68,8 +69,7 @@ body {
         height: var(--circleW);
 
         @media screen and (min-width: 50em) {
-            --circleW: 20vmin;
-
+          --circleW: 20vmin;
         }
 
         &:nth-child(2) {
